--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+:root{
+    --a:0
+}
 
 * {
     margin: 0;
     padding: 0;
     font-family: "Roboto", sans-serif;
+}
+
+.close{
+    display: none;
 }
 
 body {
@@ -20,8 +27,6 @@ body {
 .right {
     width: 75vw;
 }
-
-.home {}
 
 .home ul li {
     display: flex;
@@ -68,6 +73,7 @@ body {
 
 .right {
     margin: 16px 0;
+    position: relative;
 }
 
 .header {
@@ -84,11 +90,17 @@ body {
     padding: 16px;
 }
 
+.spotify-playlists h1{
+    padding: 16px;
+}
+
 .cardContainer {
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
     margin: 30px;
+    overflow-y: auto;
+    max-height: 60vh;
 }
 
 .card {
@@ -97,6 +109,13 @@ body {
     border-radius: 5px;
     background-color: #252525;
     position: relative;
+    transition: all .9s;
+}
+
+.card:hover{
+    background-color: rgb(105, 103, 103);
+    cursor: pointer;
+    --a: 1
 }
 
 .card>* {
@@ -108,7 +127,7 @@ body {
     object-fit: contain;
 }
 
-.card p{
+.card p {
     font-size: 14px;
 }
 
@@ -122,8 +141,295 @@ body {
     align-items: center;
     justify-content: center;
     position: absolute;
-    top: 168px;
+    bottom: 102px;
     right: 17px;
-    opacity: 0;
+    opacity: var(--a);
     transition: all 1s ease-out;
+}
+
+.buttons>* {
+    margin: 0 12px;
+}
+
+.signupbtn {
+    background-color: rgb(34, 34, 34);
+    color: rgb(156, 148, 148);
+    font-weight: bold;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.signupbtn:hover {
+    font-size: 17px;
+    color: white;
+}
+
+.loginbtn {
+    background-color: white;
+    border-radius: 21px;
+    color: black;
+    padding: 10px;
+    width: 79px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.loginbtn:hover {
+    font-weight: bold;
+    font-size: 17px;
+}
+
+.playbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    bottom: 30px;
+    filter: invert(1);
+    background-color: #dad5d5;
+    border-radius: 10px;
+    width: 90%;
+    padding: 12px;
+    width: 68vw;
+    min-height: 40px;
+}
+
+.songbuttons {
+    display: flex;
+    justify-content: center;
+    gap: 12px;
+}
+
+.songList {
+    height: 544px;
+    overflow: auto;
+    margin-bottom: 44px;
+}
+
+.hamburger{
+    display: none;
+    cursor: pointer;
+}
+
+.hamburgerContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 14px;
+}
+
+.songList ul {
+    padding: 0 12px;
+}
+
+.songList ul li {
+    list-style: decimal;
+    display: flex;
+    gap: 12px;
+    cursor: pointer;
+    padding: 12px 0;
+    border: 1px solid white;
+    margin: 12px 0;
+    padding: 13px;
+    border-radius: 5px;
+    justify-content: space-between;
+}
+
+.songList .info {
+    font-size: 13px;
+    width: 344px;
+}
+
+.info div{
+    word-break: break-all;
+}
+
+.playNow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.playNow span {
+    font-size: 15px;
+    width: 64px;
+    padding: 12px;
+}
+
+.seekbar {
+    height: 4px;
+    width: 98%;
+    background-color: black;
+    position: absolute;
+    bottom: 8px;
+    border-radius: 10px;
+    margin: 6px;
+    cursor: pointer;
+}
+
+.circle {
+    width: 13px;
+    height: 13px;
+    border-radius: 13px;
+    background-color: black;
+    position: relative;
+    bottom: 6px;
+    left: 0%;
+    transition: left 0.5s;
+}
+
+.songbuttons img {
+    cursor: pointer;
+}
+
+.timevol{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.songinfo{
+    color: black;
+    padding: 0 12px;
+    width: 250px;
+}
+
+.songtime{
+    color: black;
+    padding: 0 12px;
+    width: 125px;
+}
+
+.volume{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+    cursor: pointer;
+}
+
+.range input{
+    cursor: pointer;
+}
+
+.abovebar {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0;
+}
+
+@media (max-width: 1200px) {
+    .left {
+        padding: 0;
+        background-color: black;
+        position: absolute;
+        left: -130%;
+        transition: all .3s;
+        z-index: 1;
+        width: 373px;
+        height: 100%;
+        position: fixed;
+        top: 0;
+    }
+
+    .songinfo, .songtime{
+        width: auto;
+    }
+    
+    .left .close{
+        position: absolute;
+        right: 31px;
+        top: 25px;
+        width: 29px;
+    }
+
+    .timevol{
+        justify-content: space-evenly;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        gap: 13px;
+    }
+
+    .right {
+        width: 100vw;
+    }
+
+    .playbar {
+        width: calc(100vw - 80px);
+    }
+
+    .seekbar{
+        width: calc(100vw - 90px);
+    }
+    
+    .hamburger{
+        display: block;
+    }
+
+    .right{
+        margin: 0;
+    }
+
+    .card{
+        width: 55vw;
+    }
+
+    .cardContainer{
+        margin: 0;
+        justify-content: center;
+        
+    }
+    
+    .close{
+        display: block;
+    }
+
+    .abovebar{
+        flex-direction: column;
+        gap: 23px;
+        align-items: center;
+    }
+
+    .cardContainer{
+        max-height: unset;
+        overflow-y: unset;
+        margin-bottom: 30vh;
+    }
+
+    .playbar{
+        right: 25px;
+    }
+}
+
+@media (max-width: 500px) {
+    .card{
+        width: 100%;
+    }
+
+    .header>* {
+        padding: 2px;
+    }
+    
+    .buttons>* {
+        margin: 0 6px;
+    }
+
+    .spotify-playlists h1{
+        padding: 4px;
+    }
+
+    .playbar{
+        right: 28px;
+    }
+
+    .library{
+        height: 85vh;
+    }
+    
+    .left{
+        width: 100vw;
+    }
 }
